# moss

./: .gitignore  Dockerfile.gateway  LICENSE  README.md  capability_doc.md  docker-compose.yml  moss.toml  pyproject.toml
hooks/moss-evolution/: HOOK.md  handler.ts
moss/: __init__.py  config.py
moss/cli/: __init__.py  main.py
moss/daemon/: __init__.py  auto_scan.py  image_builder.py  main.py  server.py  swap_supervisor.py  trial_manager.py
moss/eval/: __init__.py  claweval_bridge.py  runner.py
moss/gateway/: __init__.py  app.py  prompt_inject.py  webhooks.py
moss/models/: __init__.py  batch.py  config.py  evolution.py  keypoint.py  verdict.py
moss/pipeline/: __init__.py  orchestrator.py  stage_runner.py
moss/pipeline/stages/: __init__.py  code_review.py  implement.py  locate.py  plan.py  plan_review.py  task_evaluate.py  verdict.py
moss/runner/: __init__.py  base.py  claude_code.py
moss/state/: __init__.py  paths.py  store.py
tests/: conftest.py  test_auto_scan.py  test_benchmark.py  test_cli.py  test_integration.py  test_models.py  test_pipeline.py  test_swap_supervisor.py  test_trial_manager.py
